--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
   "homepage": "https://github.com/asmb123/csv-read-backend#readme",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "@types/pg": "^8.15.5",
+    "csv-parser": "^3.2.0",
+    "express": "^5.1.0",
+    "multer": "^2.0.2",
+    "pg": "^8.16.3"
   }
 }
